force-app/main/default/objects/VeSync_Bypass_Setting__c/VeSync_Bypass_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used For bypassing Flows, validations and other automations</description>
    <label>VeSync Bypass Setting</label>
</CustomObject>