force-app/main/default/objects/VeSync_Bypass_Setting__c/fields/Bypass_All_Automations__c.field-meta.xml
<CustomField>
    <fullName>Bypass_All_Automations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass All Automations</label>
    <type>Checkbox</type>
</CustomField>