force-app/main/default/objects/VeSync_Bypass_Setting__c/fields/Bypass_All_Validations__c.field-meta.xml
<CustomField>
    <fullName>Bypass_All_Validations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass All Validations</label>
    <type>Checkbox</type>
</CustomField>