force-app/main/default/objects/VeSync_Bypass_Setting__c/fields/Bypass_Flows__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Flows__c</fullName>
    <label>Bypass Flows</label>
    <type>TextArea</type>
</CustomField>