force-app/main/default/objects/VeSync_Bypass_Setting__c/fields/Bypass_Object_Validations__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Object_Validations__c</fullName>
    <label>Bypass Object Validations</label>
    <type>TextArea</type>
</CustomField>