force-app/main/default/objects/VeSync_Bypass_Setting__c/fields/Bypass_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Trigger__c</fullName>
    <label>Bypass Trigger</label>
    <length>255</length>
    <type>Text</type>
</CustomField>